--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,9 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app/
+COPY . /app/backend/
+
+ENV PYTHONPATH=/app/backend
 
 EXPOSE 8000
 
