Update: Adding test service for backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,22 @@
+version: '3.8'
+
 services:
   backend:
-    build: backend
+    build:
+      context: ./backend
     ports:
       - "8000:8000"
+
   frontend:
-    build: frontend
+    build:
+      context: ./frontend
     ports:
       - "8080:80"
+
+  backend_test:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.test
+    command: ["pytest"]
+    depends_on:
+      - backend
